# arbind-arbeidsmarked

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
quarto/: .gitignore  _quarto.yml  index.qmd
quarto/atid/: intro.qmd  rapport.qmd
quarto/atid/tabeller/: tbl_kor_per_aar.csv  tbl_kor_pooled.csv  tbl_oversikt.csv
quarto/bedrift/: intro.qmd  rapport.qmd
quarto/bedrift/tabeller/: tbl_oversikt.csv
quarto/jobb/: intro.qmd  rapport.qmd
quarto/jobb/tabeller/: tbl_geomap.csv  tbl_kor_per_aar.csv  tbl_kor_pooled.csv  tbl_oversikt.csv
src/: analyse_arbeidsmarked.py  fetch_bedrifts_data.py  fetch_indikator_data.py  lag_rapport_data.py  standardiser_data.py
